<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.bookTicket.BookTicketActivity">

        <RelativeLayout
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_stroke_gray"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/txt_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/choose_location"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="5dp"
                android:layout_marginStart="5dp"
                android:layout_toStartOf="@+id/loc_drop_down"
                android:layout_toLeftOf="@+id/loc_drop_down"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true" />

            <ImageView
                android:id="@+id/loc_drop_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_drop_down"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cinema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_stroke_gray"
            app:layout_constraintTop_toBottomOf="@+id/location"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/txt_cinema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/choose_cinema"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="5dp"
                android:layout_marginStart="5dp"
                android:layout_toStartOf="@+id/cinema_drop_down"
                android:layout_toLeftOf="@+id/cinema_drop_down"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true" />

            <ImageView
                android:id="@+id/cinema_drop_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_drop_down"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/seat_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:minHeight="50dp"
            app:layout_constraintTop_toBottomOf="@id/cinema"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:maxLines="1"
            android:inputType="phone"
            android:padding="10dp"
            android:hint="@string/enter_seat_number"
            android:background="@drawable/round_stroke_gray"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/btn_reserve"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/reserve_seat"
            app:layout_constraintTop_toBottomOf="@+id/seat_num"
            android:background="@color/gray"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>