<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="seatDetail"
            type="com.bytestechno.tentwenty_movie.data.models.tickets.Tickets" />
        <variable
            name="location"
            type="String" />
        <variable
            name="cinema"
            type="String" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/headerCont"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_back"
                android:layout_marginLeft="10dp" />

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:id="@+id/header_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/ticket_detail"
                android:gravity="center"
                android:textColor="@color/black"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/movie_cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/headerCont"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/txt_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{seatDetail.movieName}"
                android:textSize="15sp"
                android:textStyle="normal"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/purple_500"
                android:layout_below="@+id/txt_movie"
                android:layout_marginTop="5dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/movie_date_cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movie_cont"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{seatDetail.releaseDate}"
                android:textSize="15sp"
                android:textStyle="normal"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/purple_500"
                android:layout_below="@+id/txt_date"
                android:layout_marginTop="5dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/loc_cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movie_date_cont"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/txt_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{location}"
                android:textSize="15sp"
                android:textStyle="normal"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/purple_500"
                android:layout_below="@+id/txt_loc"
                android:layout_marginTop="5dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cinema_cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/loc_cont"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cinema"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/txt_cinema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="normal"
                android:text="@{cinema}"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/purple_500"
                android:layout_below="@+id/txt_cinema"
                android:layout_marginTop="5dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/seat_num_cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cinema_cont"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seat_number"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/txt_seat_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(seatDetail.seatNum)}"
                android:textSize="15sp"
                android:textStyle="normal"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/purple_500"
                android:layout_below="@+id/txt_seat_num"
                android:layout_marginTop="5dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ticket_num_cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/seat_num_cont"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_num"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/txt_ticket_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(seatDetail.ticketNum)}"
                android:textSize="15sp"
                android:textStyle="normal"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/purple_500"
                android:layout_below="@+id/txt_ticket_num"
                android:layout_marginTop="5dp"/>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
