<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="detail"
            type="com.bytestechno.tentwenty_movie.data.models.movieDetail.MovieDetail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.movieDetail.MovieDetailActivity">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:layout_constraintTop_toTopOf="parent"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#5A5A5A"
            app:sliderIndicatorUnselectedColor="#FFF"
            app:sliderScrollTimeInSec="4"
            app:sliderStartAutoCycle="true" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/slider"
            android:text="@{detail.originalTitle}"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <LinearLayout
            android:id="@+id/btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/movie_title">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/btn_trailer"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/watch_trailer"
                android:background="@color/gray"
                android:layout_marginTop="10dp"
                android:layout_weight="1.3"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/btn_book_movie"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight=".7"
                android:text="@string/book"
                android:background="@color/gray"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btn_layout"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/genre_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/genre"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/genre_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/genre_title"
                    android:text="@{detail.commaSeparateGenre}"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/release_date_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/genre_name"
                    android:text="@string/date"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/release_date_title"
                    android:text="@{detail.releaseDate}"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/overview_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/release_date"
                    android:text="@string/overview"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/overview_title"
                    android:text="@{detail.overview}"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:maxLines="5"
                    android:ellipsize="end"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <FrameLayout
            android:id="@+id/loader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>